<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymapp2.ui.notifications.NotificationsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_calentamiento"
        android:name="com.example.gymapp2.FragmentCalentamiento"
        android:label="@string/title_calentamiento"
        tools:layout="@layout/fragment_calentamiento"/>

    <fragment
        android:id="@+id/navigation_recompensa"
        android:name="com.example.gymapp2.FragmentRecompensas"
        android:label="@string/title_recompensa"
        tools:layout="@layout/fragment_recompensas" />
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.gymapp2.Fragmentperfil"
        android:label="Perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>