<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/Horizontal_70dp"
    android:orientation="vertical"
    tools:context=".Fragmentperfil">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="167dp"
        android:text="@string/peso"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="167dp"
        android:text="@string/meta_peso"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="535dp"
        android:text="@string/Masa_Muscular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="535dp"
        android:text="@string/meta_masaMuscular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:background="#2196F3"
        android:text="Peso"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="374dp"
        android:background="#03A9F4"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Masa_Muscular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="457dp"
        android:background="#2196F3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/peso_M1"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber4"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2196F3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/peso_M2"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber5"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="54dp"
        android:background="#2196F3"
        android:ems="10"
        android:text="@string/peso_M3"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="374dp"
        android:background="#03A9F4"
        android:ems="10"
        android:text="@string/MMM1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber5"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="374dp"
        android:background="#03A9F4"
        android:ems="10"
        android:text="@string/MMM2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumber6"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="374dp"
        android:background="#03A9F4"
        android:ems="10"
        android:text="@string/MMM3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
</androidx.constraintlayout.widget.ConstraintLayout>